samples/_failures_safe/1761071932_4c9bec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3b410e63.c: In function ‘main’:
./samples/SAFE/__tmp_3b410e63.c:157:17: error: expected declaration or statement at end of input
  157 |                 break;
      |                 ^~~~~
./samples/SAFE/__tmp_3b410e63.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3b410e63.c:157:17: error: expected declaration or statement at end of input
